--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
 			<artifactId>javax.activation-api</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
