--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,3 +7,5 @@ spring.datasource.password={JDBC_DATABASE_PASSWORD}
 algamoney.origem-permitida=https://cpson-algamoney-angular.herokuapp.com
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+spring.profiles.active=oauth-security
