--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,9 @@
 		<dependency>
 			<groupId>org.springframework.security.oauth</groupId>
 			<artifactId>spring-security-oauth2</artifactId>
-			<version>2.3.6.RELEASE</version>
+			<version>2.3.7.RELEASE</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-jwt</artifactId>
@@ -68,7 +69,8 @@
 			<artifactId>flyway-core</artifactId>
 		</dependency>
 
-		<!-- DEPENDENCIA CAUSA A NAO GERACAO DOS CLASS FILES DENTRO DO JAR. DESCOBRIR O PORQUE -->
+		<!-- DEPENDENCIA CAUSA A NAO GERACAO DOS CLASS FILES DENTRO DO JAR. DESCOBRIR 
+			O PORQUE -->
 		<!-- dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-jpamodelgen</artifactId>
